access modifiers class test added